Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-5047

Unmapped url log fields sometimes do not have a host

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 7.1.0
    • Logging
    • None

    Description

      Under various circumstances the cquuc and cquuh tags can omit a host. This occurs when the client request URL does not have a host and there is either no remap rule for the URL, or caching is disabled, or there is an error.

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              amc Alan M. Carroll
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 10m
                  1h 10m