TS-5047: Fix unmapped URL logging tags.